--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
+.home-hld{
+  height: 750px;
+  color:rgb(250, 246, 246);
+  font-family: 'Mansalva';
+}
+
+
+.home-hld h2{
+  width: 50%;
+  text-align: justify;
+  font-size: 33px;
+  padding-left: 30px;
+  padding-right: 30px;
+  position: absolute;
+  top:60px;
+  left: 360px;
+}
+
+
+
+.home-hld input[type=text]{
+  width:30%;
+  height: 30px;
+  font-size: 25px;
+  border-radius: 25px;
+  color:#663399;
+  font-family: 'Mansalva';
+}
+
+::placeholder{
+  color: #663399;
+}
+.home-hld input{
+  background-color: transparent;
+  border: 1px solid #663399;
+  position: absolute;
+  top:300px;
+  left:430px;
+}
+
+
+
+
+.home-hld button{
+  background-color: #663399;
+  color: #3CB371;
+  width:9%;
+  height: 5%;
+  border: 1px solid #663399;
+  font-family: 'Mansalva';
+  font-size: 19px;
+  border-radius: 25px;
+  position: absolute;
+  top:300px;
+  left:900px;
+  transition:all 0.5s;
+}
+
+.home-hld button:hover{
+  background-color: #3CB371;
+  color:#663399;
+  border: 1px solid #3CB371;
+  
+}
+
+.home-hld a{
+  color:#663399;
+  font-size: 20px;
+  text-decoration: none;
+  position: relative;
+  left:1100px;
+  top:450px;
+}
+
+#quote-stl{
+  font-size: 20px;
   text-align: center;
+  width: 30%;
+  height: 10%;
+  padding: 5px;
+  position: relative;
+  top:400px;
+  left:500px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.part-two{
+  font-family: 'Mansalva';
+  font-size: 20px;
+  height: 750px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.part-two a{
+  text-decoration: none;
+  color:#663399;
+  position: relative;
+  bottom: 300px;
+  left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.goal-style{
+  border: 1px solid yellow;
+  width: 60%;
+  height: 600px;
+  position: relative;
+  left: 350px;
+  top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
