--- a/src/Components/Popup.css
+++ b/src/Components/Popup.css
@@ -1,17 +1,357 @@
 .popup{
-    border: 1px solid yellow;
-    
+    border: 1px solid #663399;
+    border-radius: 25px;
 }
 
-/* .popup-inner{
+.popup h5{
     position: relative;
-    padding: 20px;
-    width: 50%;
-    background-color: red;
+    bottom: 50px;
+    left: 250px;
+    color: #663399;
+    font-size: 17px;
 }
 
-.popup-inner .close-btn{
-    position: absolute;
-    top: 16px;
-    right: 16px;
-} */
+.popup .close-btn{
+    position: relative;
+    top:110px;
+    left: 400px;
+    background-color:#DC143C;
+    color: #663399;
+    border: 1px solid #DC143C;
+    border-radius: 25px;
+    font-family: 'Mansalva';
+    width: 10%;
+    border: 1px solid #DC143C;
+    border-radius: 25px;
+    font-family: 'Mansalva';
+    font-size: 17px;
+    transition: all 0.5s;
+}
+
+.close-btn:hover{
+    background-color:red;
+  border: 1px solid red;
+  transition: all 0.5s;
+}
+
+.popup input{
+    position: relative;
+    bottom: 60px;
+    left: 320px;
+    height: 30px;
+    font-size: 20px;
+    border: 1px solid #663399;
+    border-radius: 25px;
+}
+
+.gl-btn{
+    position: relative;
+    left: 330px;
+    bottom: 60px;
+    width: 10%;
+    height: 30px;
+    background-color: #2ebf91;
+    color: #663399;
+    border: 1px solid #2ebf91;
+    border-radius: 25px;
+    font-family: 'Mansalva';
+    font-size: 17px;
+    transition: all 0.5s;
+}
+
+.gl-btn:hover{
+    background-color:#228B22 ;
+    border: 1px solid #228B22;
+    transition: all 0.5s;
+  }
+
+  /* Media querries for popup */
+
+  @media(max-width:1300px){
+      .popup h5{
+          position: relative;
+          left: 200px;
+      }
+
+      .popup .close-btn{
+          position: relative;
+          left:350px;
+      }
+
+      .popup input {
+          position: relative;
+          left: 250px;
+      }
+
+      .gl-btn{
+          position: relative;
+          left:260px;
+      }
+  }
+
+  @media(max-width:1200px){
+      .gl-btn{
+          width: 15%;
+      }
+  }
+
+  @media(max-width:1100px){
+      .popup h5{
+          position: relative;
+          left:150px;
+      }
+
+      .popup input{
+          position: relative;
+          left: 200px;
+      }
+
+      .popup .close-btn{
+          position: relative;
+          left: 300px;
+      }
+
+      .gl-btn{
+          position: relative;
+          left:210px;
+      }
+  }
+
+  @media(max-width:1000px){
+    .popup h5{
+        position: relative;
+        left:120px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 150px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 250px;
+        width: 17%;
+    }
+
+    .gl-btn{
+        position: relative;
+        left:150px;
+    }
+}
+
+@media(max-width:950px){
+    .popup h5{
+        position: relative;
+        left:90px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 110px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 230px;
+        width: 17%;
+    }
+
+    .gl-btn{
+        position: relative;
+        left:110px;
+    }
+}
+
+@media(max-width:850px){
+    .popup h5{
+        position: relative;
+        left:70px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 100px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 230px;
+    }
+
+    .gl-btn{
+        position: relative;
+        left:110px;
+    }
+}
+
+@media(max-width:800px){
+    .popup h5{
+        position: relative;
+        left:50px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 90px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 200px;
+    }
+
+    .gl-btn{
+        position: relative;
+        left:90px;
+        width: 17%;
+    }
+}
+
+@media(max-width:750px){
+    .popup h5{
+        position: relative;
+        left:70px;
+        font-size: 15px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 100px;
+        font-size: 15px;
+        height: 20px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 200px;
+        font-size: 15px;
+    }
+
+    .gl-btn{
+        position: relative;
+        left:100px;
+        font-size: 15px;
+    }
+}
+
+@media(max-width:700px){
+    .popup h5{
+        position: relative;
+        left: 80px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 210px;
+    }
+    .gl-btn{
+        position: relative;
+        left: 120px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 120px;
+    }
+}
+
+@media(max-width:650px){
+    .popup h5{
+        position: relative;
+        left: 50px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 160px;
+    }
+    .gl-btn{
+        position: relative;
+        left: 100px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 100px;
+    }
+}
+
+@media(max-width:550px){
+    .popup h5{
+        font-size: 13px;
+    }
+
+    .popup input{
+        font-size: 13px;
+        height: 13px;
+    }
+
+    .gl-btn{
+        font-size: 13px;
+
+    }
+    .popup .close-btn{
+        font-size: 13px;
+        position: relative;
+        top:90px;
+        
+    }
+}
+
+@media(max-width:500px){
+    .popup h5{
+        position: relative;
+        left: 30px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 80px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 150px;
+    }
+
+    .gl-btn{
+        position: relative;
+        left: 80px;
+        font-size: 12px;
+    }
+}
+
+@media(max-width:450px){
+    .popup h5{
+        font-size: 12.5px;
+        position: relative;
+        left: 20px;
+    }
+
+    .popup input{
+        position: relative;
+        left: 60px;
+    }
+
+    .gl-btn{
+        position: relative;
+        left: 60px;
+        width: 60px;
+        height: 30px;
+    }
+
+    .popup .close-btn{
+        position: relative;
+        left: 130px;
+    }
+}
+
+@media(max-width:400px){
+    .popup h5{
+        position: relative;
+        left: 10px;
+        
+    }
+}
+
